<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myapp_navigation"
    app:startDestination="@id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.example.navigationdrawerfromzero.fragments.PrincipalFragment"
        android:label="@string/principal"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/nav_servicos"
        android:name="com.example.navigationdrawerfromzero.fragments.ServicosFragment"
        android:label="@string/servicos"
        tools:layout="@layout/fragment_servicos" />
    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.navigationdrawerfromzero.fragments.ClientesFragment"
        android:label="@string/clientes"
        tools:layout="@layout/fragment_clientes" />
    <fragment
        android:id="@+id/nav_contato"
        android:name="com.example.navigationdrawerfromzero.fragments.ContatoFragment"
        android:label="@string/contato"
        tools:layout="@layout/fragment_contato" />
    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.example.navigationdrawerfromzero.fragments.SobreFragment"
        android:label="@string/sobre"
        tools:layout="@layout/fragment_sobre" />
</navigation>